--- a/TP1/Ejercicio6.html
+++ b/TP1/Ejercicio6.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>UNLu-PAW-Ejercicio 6</title>
@@ -9,15 +10,104 @@
 <body>
     <header>
 
+        <!-->Logo</!-->
+        <img src="" alt="Company Logo" />
+
+        <h2 id="telefono"></h2>
+
     </header>
     <nav>
-
+        <section id="dropDownMenus">
+            <ul>
+                <li>Menu Option 1</li>
+                <li>Menu Option 2</li>
+                <li>Menu Option 3</li>
+            </ul>
+        </section>
+        <section id="Links Nav">
+            <a href="">Link1</a>
+            <a href="">Link2</a>
+            <a href="">Link3</a>
+        </section>
     </nav>
-    <section>
-
-    </section>
+    <main>
+        <section id="Scrolling Promos">
+            <ul>
+                <li>Promo1</li>
+                <li>Promo2</li>
+                <li>Promo3</li>
+            </ul>
+        </section>
+        <section id="Featured Departments">
+            <ul>
+                <li>Dept 1</li>
+                <li>Dept 2</li>
+                <li>Dept 3</li>
+            </ul>
+        </section>
+        <section id="Brand Logo Scroller">
+            <ul>
+                <li>Brand Logo 1</li>
+                <li>Brand Logo 2</li>
+                <li>Brand Logo 3</li>
+            </ul>
+        </section>
+        <section id="Tabbed ___">
+            <article>
+                <h2>title</h2>
+                <p> content</p>
+            </article>
+            <article>
+                <h2>title</h2>
+                <p>content</p>
+            </article>
+            <article>
+                <h2>title</h2>
+                <p>content</p>
+            </article>
+        </section>
+        <article>
+            <h2>title</h2>
+            <p>content</p>
+        </article>
+        <article>
+            <h2>title</h2>
+            <p>content</p>
+        </article>
+    </main>
+    <aside>
+        <section id="Herramientas">
+            <div id="Checkout">
+                <button type="button" name="Checkout"> Checkout</button>
+            </div>
+            <div id="searchBox">
+                <input type="text" name="search">
+            </div>
+            <div id="NewsSingUp">
+                <h2>News Letter Sign Up</h2>
+                <img src="" alt="a letter / envelope">
+                <input type="text" name="mailSignUp">
+                <button type="button"></button>
+            </div>
+        </section>
+    </aside>
     <footer>
-
+        <section id="Other interest links">
+            <a href="">link</a>
+            <a href="">link</a>
+            <a href="">link</a>
+            <a href="">link</a>
+            <!-->.... </!-->
+        </section>
+        <section id="Social Networks">
+            <a href=""> <img src="" alt=""></a>
+            <a href=""> <img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+        </section>
+        <section id="firmas y copyright">
+            <p>Desarrollado por</p>
+        </section>
     </footer>
 </body>
+
 </html>
