--- a/TP1/Ejercicio6.html
+++ b/TP1/Ejercicio6.html
@@ -92,19 +92,19 @@
         </section>
     </aside>
     <footer>
-        <section id="Other interest links">
+        <section id="footerLinks">
             <a href="">link</a>
             <a href="">link</a>
             <a href="">link</a>
             <a href="">link</a>
             <!-->.... </!-->
         </section>
-        <section id="Social Networks">
+        <section id="SocialNets">
             <a href=""> <img src="" alt=""></a>
             <a href=""> <img src="" alt=""></a>
             <a href=""><img src="" alt=""></a>
         </section>
-        <section id="firmas y copyright">
+        <section id="firmas">
             <p>Desarrollado por</p>
         </section>
     </footer>
