--- a/TP1/Ejercicio4.html
+++ b/TP1/Ejercicio4.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset=”utf-8”>
+    <meta name="author" content="Bruno Crisafulli y Mario Quiroga">
 </head> 
     
 <body>    
