--- a/TP1/Ejercicio7.html
+++ b/TP1/Ejercicio7.html
@@ -9,7 +9,7 @@
     <header>
         <img id="logo" src=""/>       
     </header>
-    <section>
+    <section id="herramientas">
         <input type="text"> 
         <button type="button">Search</button>
         <a href="">Browse</a>
