Arreglado html ej 6 comienzo del css

--- a/TP1/Ejercicio6.html
+++ b/TP1/Ejercicio6.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <title>UNLu-PAW-Ejercicio 6</title>
     <meta name="author" content="Bruno Crisafulli y Mario Quiroga">
+    <link rel="stylesheet" href="ej6.style.css">
 </head>
 
 <body>
     <header>
 
-        <!-->Logo</!-->
+        <!--Logo-->
         <img src="" alt="Company Logo" />
 
         <h2 id="telefono"></h2>
@@ -97,7 +98,7 @@
             <a href="">link</a>
             <a href="">link</a>
             <a href="">link</a>
-            <!-->.... </!-->
+            <!-- ... -->
         </section>
         <section id="SocialNets">
             <a href=""> <img src="" alt=""></a>
