Arreglado correccion ej 8

--- a/TP1/Ejercicio6.html
+++ b/TP1/Ejercicio6.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>UNLu-PAW-Ejercicio 6</title>
     <meta name="author" content="Bruno Crisafulli y Mario Quiroga">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="ej6.style.css">
 </head>
 
@@ -19,11 +20,15 @@
     </header>
     <nav>
         <section id="dropDownMenus">
-            <ul>
-                <li>Menu Option 1</li>
-                <li>Menu Option 2</li>
-                <li>Menu Option 3</li>
-            </ul>
+            <div class="dropdown">
+                <button>MENU</button>
+                <i class="fa fa-caret-down"></i>
+                <ul>
+                    <li>Menu Option 1</li>
+                    <li>Menu Option 2</li>
+                    <li>Menu Option 3</li>
+                </ul>
+            </div>
         </section>
         <section id="Links Nav">
             <a href="">Link1</a>
