--- a/TP1/Ejercicio6.html
+++ b/TP1/Ejercicio6.html
@@ -5,115 +5,159 @@
     <meta charset="UTF-8">
     <title>UNLu-PAW-Ejercicio 6</title>
     <meta name="author" content="Bruno Crisafulli y Mario Quiroga">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="ej6.style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     <header>
 
-        <!--Logo-->
-        <img src="" alt="Company Logo" />
+        <div class="header-1erRow">
+            <img src="imgs/logo.jpg" alt="Company Logo" id="logo" />
 
-        <h2 id="telefono"></h2>
-
-    </header>
-    <nav>
-        <section id="dropDownMenus">
-            <div class="dropdown">
-                <button>MENU</button>
-                <i class="fa fa-caret-down"></i>
-                <ul>
-                    <li>Menu Option 1</li>
-                    <li>Menu Option 2</li>
-                    <li>Menu Option 3</li>
-                </ul>
-            </div>
-        </section>
-        <section id="Links Nav">
-            <a href="">Link1</a>
-            <a href="">Link2</a>
-            <a href="">Link3</a>
-        </section>
-    </nav>
-    <main>
-        <section id="Scrolling Promos">
-            <ul>
-                <li>Promo1</li>
-                <li>Promo2</li>
-                <li>Promo3</li>
-            </ul>
-        </section>
-        <section id="Featured Departments">
-            <ul>
-                <li>Dept 1</li>
-                <li>Dept 2</li>
-                <li>Dept 3</li>
-            </ul>
-        </section>
-        <section id="Brand Logo Scroller">
-            <ul>
-                <li>Brand Logo 1</li>
-                <li>Brand Logo 2</li>
-                <li>Brand Logo 3</li>
-            </ul>
-        </section>
-        <section id="Tabbed ___">
-            <article>
-                <h2>title</h2>
-                <p> content</p>
-            </article>
-            <article>
-                <h2>title</h2>
-                <p>content</p>
-            </article>
-            <article>
-                <h2>title</h2>
-                <p>content</p>
-            </article>
-        </section>
-        <article>
-            <h2>title</h2>
-            <p>content</p>
-        </article>
-        <article>
-            <h2>title</h2>
-            <p>content</p>
-        </article>
-    </main>
-    <aside>
-        <section id="Herramientas">
+            <h3 id="telefono"> Tel: 0800-666-777</h3>
             <div id="Checkout">
                 <button type="button" name="Checkout"> Checkout</button>
             </div>
-            <div id="searchBox">
-                <input type="text" name="search">
+        </div>
+        <nav>
+            <section id="menu" class="menu-1erRow">
+                <span id="menuButton" onclick="openNav()">&#9776; Menu</span>
+                <div class="sidenav" id="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <a href="#">Menu Option 1</a>
+                    <a href="#">Menu Option 2</a>
+                    <a href="#">Menu Option 3</a>
+                </div>
+                <div id="searchBox" class="menu-1erRow">
+                    <label id="searchTag" for="search">Búsqueda</label>
+                    <input type="text" name="search">
+                </div>
+            </section>
+            <section class="linknav">
+                <a href="">Link1</a>
+                <a href="">Link2</a>
+                <a href="">Link3</a>
+            </section>
+        </nav>
+
+    </header>
+
+    <main>
+        <section class="scrollProm" id="Scrolling Promos">
+            <div class="imag">
+                <img class="promo1" src="imgs/slim.jpg" alt="slim powerfull laptop">
             </div>
-            <div id="NewsSingUp">
-                <h2>News Letter Sign Up</h2>
-                <img src="" alt="a letter / envelope">
-                <input type="text" name="mailSignUp">
-                <button type="button"></button>
+            <div class="imag">
+                <img class="promo2" src="imgs/promoSlide.png" alt="slim powerfull laptop">
+            </div>
+            <div class="imag">
+                <img class="promo3" src="imgs/slim.jpg" alt="slim powerfull laptop">
+            </div>
+
+        </section>
+        <section class="featured-depts">
+            <h2>Featured Departments</h2>
+
+            <div class="imgBox">
+                <div class="dept">
+                    <img src="imgs/fd1.jpg" alt="">
+                    <p><b>Lorem ipsum dolor</b> sit amet, consectetur adipiscing elit. Maecenas sollicitudin malesuada facilisis. Proin ultrices nisi lorem, at porttitor lacus tristique.
+                    </p>
+                </div>
+                <div class="dept">
+                    <img src="imgs/fd2.jpg" alt="">
+                    <p><b>Lorem ipsum dolor</b> sit amet, consectetur adipiscing elit. Maecenas sollicitudin malesuada facilisis. Proin ultrices nisi lorem, at porttitor lacus tristique.
+                    </p>
+                </div>
+                <div class="dept">
+                    <img src="imgs/fd3.jpg" alt="">
+                    <p><b>Lorem ipsum dolor</b> sit amet, consectetur adipiscing elit. Maecenas sollicitudin malesuada facilisis. Proin ultrices nisi lorem, at porttitor lacus tristique.
+                    </p>
+                </div>
             </div>
         </section>
-    </aside>
+        <section class="container">
+            <img class="brand-logos" src="imgs/brandLogos.jpg" alt="brand logos">
+        </section>
+        <div class="garabatosBox">
+            <section class="main-garab">
+                <article>
+                    <h2>Lorem ipsum dolor</h2>
+                    <p> sit amet, consectetur adipiscing elit. Maecenas sollicitudin malesuada facilisis. Proin ultrices nisi lorem, at porttitor lacus tristique.</p>
+                </article>
+                <article style="display: none">
+                    <h2>title</h2>
+                    <p>sit amet, consectetur adipiscing elit. Maecenas sollicitudin malesuada facilisis. Proin ultrices nisi lorem, at porttitor lacus tristique.</p>
+                </article>
+                <article style="display: none">
+                    <h2>title</h2>
+                    <p>sit amet, consectetur adipiscing elit. Maecenas sollicitudin malesuada facilisis. Proin ultrices nisi lorem, at porttitor lacus tristique.</p>
+                </article>
+            </section>
+            <div class="vertical-border"></div>
+            <article class="garab">
+                <h2>Lorem ipsum dolor</h2>
+                <p>sit amet, consectetur adipiscing elit. Maecenas sollicitudin malesuada facilisis. Proin ultrices nisi lorem, at porttitor lacus tristique.</p>
+            </article>
+            <div class="vertical-border"></div>
+            <article class="garab">
+                <h2>Lorem ipsum dolor</h2>
+                <p>sit amet, consectetur adipiscing elit. Maecenas sollicitudin malesuada facilisis. Proin ultrices nisi lorem, at porttitor lacus tristique.</p>
+            </article>
+
+        </div>
+    </main>
     <footer>
-        <section id="footerLinks">
-            <a href="">link</a>
-            <a href="">link</a>
-            <a href="">link</a>
-            <a href="">link</a>
-            <!-- ... -->
+        <section class="links">
+            <section class="footerLinks">
+                <a href="">About Us</a>
+                <a href="">consectetur</a>
+                <a href="">adipiscing</a>
+                <a href="">link</a>
+                <!-- ... -->
+            </section>
+            <div class="vertical-border"></div>
+            <section class="footerLinks">
+                <a href="">Team</a>
+                <a href="">nisi</a>
+                <a href="">lorem</a>
+                <a href="">link</a>
+                <!-- ... -->
+            </section>
+            <div class="vertical-border"></div>
+            <section class="footerLinks">
+                <a href="">Other Proyects</a>
+                <a href="">lacus</a>
+                <a href="">tristique</a>
+                <a href="">link</a>
+                <!-- ... -->
+            </section>
+            <div class="vertical-border"></div>
+            <div class="news-sing">
+                <h2><img id=mailIcon src="imgs/mailIcon.png" alt="a letter / envelope"> News Letter Sign Up</h2>
+                <input type="text" name="mailSignUp">
+                <button type="button">subscribe</button>
+            </div>
         </section>
-        <section id="SocialNets">
-            <a href=""> <img src="" alt=""></a>
-            <a href=""> <img src="" alt=""></a>
-            <a href=""><img src="" alt=""></a>
+        <section>
+            <img id=socialIcon src="imgs/socialIcons.jpg" alt="social net links">
+
         </section>
-        <section id="firmas">
-            <p>Desarrollado por</p>
+        <section class="firmas">
+            <p>Desarrollado por Bruno Crisafulli y Mario Quiroga</p>
         </section>
     </footer>
+    <script>
+        function openNav() {
+            document.getElementById("sidenav").style.width = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById("sidenav").style.width = "0";
+        }
+
+    </script>
 </body>
 
 </html>
