--- a/TP1/Ejercicio8.html
+++ b/TP1/Ejercicio8.html
@@ -12,14 +12,14 @@
         <h2>The Evolution Of</h2>
 
         <h1><pre> &lt; Web Design &gt; </pre></h1>       
-        <img class="evolution" src="img/evolution.png">
+        <img class="evolution" src="imgs/evolution.png">
 
     </header>    
     <main>
 
         <ol>
         	<li>
-        		<div class="firstImg"><img src="img/1Imagen.png"></div>
+        		<div class="firstImg"><img src="imgs/1Imagen.png"></div>
         		<div class="der">
 		            <div class="hd"><h3>HTML</h3></div>
 		            <p class="pp">The First markup language was launched to code basic building blocks of a website.</p>
@@ -30,7 +30,7 @@
             	
             	<div class="izq webcreated">
 	            	<div class="hd"><h3>1st Website Created</h3></div>
-	            	<img class="img1" src="img/1WebSiteCreated.png">
+	            	<img class="img1" src="imgs/1WebSiteCreated.png">
 		            <p>Tim Berner's Lee - Also known as TimBL is a British Computer Scientist & Creator of WWW</p>
             	</div>            
             	<h3 class="anio">1991</h3>
@@ -57,7 +57,7 @@
             	<div class="izq js">
 		            <div class="hd"><h3>Flash & Javascript</h3></div>
 		            <div class="row">
-			           	<img class="imgJs" src="img/javascript.png">
+			           	<img class="imgJs" src="imgs/javascript.png">
 			            <p>Flash & Javascript introduced for a more interactive web.</p>      		          
 		            </div>
 	            </div>
@@ -69,13 +69,13 @@
 		            <div class="hd cssDesign"><h3>CSS Design</h3></div>
 		            <div class="row">		            
 			            <p>Faster loading CSS websites come into being & cost 10x the table design.</p>	         
-			            <img class="imgCss" src="img/css.png">
+			            <img class="imgCss" src="imgs/css.png">
 		            </div>
 	            </div>
 	            <div class="izq phpWebSites">
 	            	<div class="hd"><h3>PHP websites</h3></div>
 	            	<div class="row">	
-						<img class="imgPhp" src="img/php.png">
+						<img class="imgPhp" src="imgs/php.png">
 		            	<p>PHP3 websites pave the way for Dynamic Websites.</p>	            	
 	            	</div>
 	            </div>
@@ -86,7 +86,7 @@
 	            <div class="der cssWeb20">
 	            	<div class="hd"><h3>CSS 3 & Web 2.0</h3></div>
 	            	<div class="row">	
-		                <img class="imgWeb20" src="img/css3-web2.0.png">
+		                <img class="imgWeb20" src="imgs/css3-web2.0.png">
 		                <p>CSS3 Introduces new Features & function. Web 2.0 introduces age of user based infomation sites.</p>	
 	                </div>                
                 </div>
@@ -97,7 +97,7 @@
             	<div class="der ">
 		            <div class="hd"><h3>Mobile Web</h3></div>
 		            <div class="row">	
-			            <img src="img/mobile.png">
+			            <img src="imgs/mobile.png">
 			            <p>Mobile web takes over, more websites now develop Mobile version of sites & Apps.</p>     
 		        	</div>
 	            </div>	            
@@ -108,7 +108,7 @@
 	            <div class="izq html5">
 	            	<div class="hd"><h3>HTML 5</h3></div>	                
 	            	<div class="row">
-	                <img class="imgHtml5" src="img/html5.png">
+	                <img class="imgHtml5" src="imgs/html5.png">
 	                <p>HTML5 websites are accesible across different devices & provide more enrich embedded media experience.</p>
 	                </div>
 	            </div>
@@ -118,7 +118,7 @@
     </main>
     <footer>
     	<div class="row">
-        	<img src="img/like.png" id="img-facebook">
+        	<img src="imgs/like.png" id="img-facebook">
         	<h2>Facebook.com/Clixlogix</h2>
         </div>
         <ul>
