Punto 7 sin terminar

--- a/TP4/Punto 2/index.html
+++ b/TP4/Punto 2/index.html
@@ -8,14 +8,13 @@
     <script src="loading.js" type="text/javascript"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            LoaderIcon.init("loader-icon");
+            LoadingListener.init("loading-icon");
         });
 
     </script>
 </head>
 
 <body>
-    <div class="loader-icon" id="loader-icon"></div>
+    <div class="loading-icon" id="loading-icon"></div>
 </body>
-
 </html>
