Punto 6 Barra de Progreso Terminado

--- a/TP4/Punto 6-Barra de Progreso/Ejercicio6.html
+++ b/TP4/Punto 6-Barra de Progreso/Ejercicio6.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>UNLu-PAW-Ejercicio 6</title>
     <meta name="author" content="Bruno Crisafulli y Mario Quiroga">
-    <link rel="stylesheet" href="ej6.style.css">
+    <link rel="stylesheet" href="css/ej6.style.css">
+    <link rel="stylesheet" type="text/css" href="css/progres.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -57,6 +58,10 @@
             </div>
             <a class="prev" onclick="anteriorImagen()">&#10094;</a>
             <a class="next" onclick="seguienteImagen()"">&#10095;</a>
+
+            <div id="myProgress">
+                <div id="myBar">10%</div>
+            </div>
 
         </section>
         <section class="featured-depts">
@@ -161,6 +166,7 @@
         }
 
     </script>
+    <script type="text/javascript" src="js/progres.js"></script>
     <script type="text/javascript" src="js/carrusel.js"></script>
 </body>
 
