--- a/TP4/Punto 7/index.html
+++ b/TP4/Punto 7/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>UNLu - PAW - Reproductor de Video</title>
     <link rel="stylesheet" href="rpd-video.css">
-    
+    <meta name="author" content="Bruno Crisafulli y Mario Quiroga">
 </head>
 <body>
     
