--- a/TP4/Punto 4-Galeria/galeria.html
+++ b/TP4/Punto 4-Galeria/galeria.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Galería de Imágenes</title>
 	<meta charset="utf-8">
-
+	<meta name="author" content="Bruno Crisafulli y Mario Quiroga">
 </head>
 <body>
 	<header>
