--- a/TP1/Ejercicio6.html
+++ b/TP1/Ejercicio6.html
@@ -31,7 +31,7 @@
                 </div>
                 <div id="searchBox" class="menu-1erRow">
                     <label id="searchTag" for="search">Búsqueda</label>
-                    <input type="text" name="search">
+                    <input type="text" name="search" id="search">
                 </div>
             </section>
             <section class="linknav">
