--- a/TP4/Punto 7 - Video Player/index.html
+++ b/TP4/Punto 7 - Video Player/index.html
@@ -25,7 +25,7 @@
         </video>
     </section>
 
-    <!-- Supongo que el backend imprime una ul con las siguientes caract-->
+    <!-- Supongo que el backend imprime una ol con las siguientes caract-->
     <ol>
         <li>
             <input type="hidden" class="vid-src" value="videos/sample1.mp4">
